fix: update header spacing and enhance text styling for improved layout

--- a/src/app/component/home/home.css
+++ b/src/app/component/home/home.css
@@ -3,7 +3,7 @@
 }
 header {
     background-color: var(--primary-color);
-    min-height: 540px;
+    min-height: 550px;
 }
 fa-icon {
     position: relative;
